{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 338,
  "lineage": "03335871-43db-30c7-45f6-58ace8a945bc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:171677985136:route-table/rtb-0278b0954efa90908",
            "default_route_table_id": "rtb-0278b0954efa90908",
            "id": "rtb-0278b0954efa90908",
            "owner_id": "171677985136",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04d558e41d24156d3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-public-estudos-perdidao"
            },
            "tags_all": {
              "Name": "rt-public-estudos-perdidao"
            },
            "timeouts": null,
            "vpc_id": "vpc-07801e3c0392af6b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2ab3b8efb09f272",
            "arn": "arn:aws:ec2:us-west-2:171677985136:instance/i-0fff24956630f047d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fff24956630f047d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "estudos-perdidao",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-06b42a72411ebb987",
            "private_dns": "ip-10-0-0-188.us-west-2.compute.internal",
            "private_ip": "10.0.0.188",
            "public_ip": "34.215.42.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-054fdf1fc407fdb7a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-092daef5bd9ea1d9a",
            "tags": {
              "Name": "ec2-instance-estudos-perdidao"
            },
            "tags_all": {
              "Name": "ec2-instance-estudos-perdidao"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-087a1d525f2940751"
            ]
          },
          "dependencies": [
            "aws_db_instance.default",
            "aws_db_subnet_group.default",
            "aws_security_group.allow_rds",
            "aws_security_group.allow_ssh",
            "aws_subnet.subnet_private_a",
            "aws_subnet.subnet_private_b",
            "aws_subnet.subnet_public_a",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:171677985136:internet-gateway/igw-04d558e41d24156d3",
            "id": "igw-04d558e41d24156d3",
            "owner_id": "171677985136",
            "tags": {
              "Name": "igw-estudos-perdidao"
            },
            "tags_all": {
              "Name": "igw-estudos-perdidao"
            },
            "vpc_id": "vpc-07801e3c0392af6b1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:171677985136:route-table/rtb-0ba8499fa2873c9b2",
            "id": "rtb-0ba8499fa2873c9b2",
            "owner_id": "171677985136",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt-private-estudos-perdidao"
            },
            "tags_all": {
              "Name": "rt-private-estudos-perdidao"
            },
            "timeouts": null,
            "vpc_id": "vpc-07801e3c0392af6b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d13c8af21c6f5b3e",
            "route_table_id": "rtb-0ba8499fa2873c9b2",
            "subnet_id": "subnet-0a48c514e15861543"
          },
          "dependencies": [
            "aws_route_table.route_table_private",
            "aws_subnet.subnet_private_a",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a54214361f908a84",
            "route_table_id": "rtb-0ba8499fa2873c9b2",
            "subnet_id": "subnet-0017b5c7857c880d2"
          },
          "dependencies": [
            "aws_route_table.route_table_private",
            "aws_subnet.subnet_private_b",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e99156b7b712b78d",
            "route_table_id": "rtb-0278b0954efa90908",
            "subnet_id": "subnet-092daef5bd9ea1d9a"
          },
          "dependencies": [
            "aws_subnet.subnet_public_a",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04282d21a1e0c34ad",
            "route_table_id": "rtb-0278b0954efa90908",
            "subnet_id": "subnet-0814864bd5aea2600"
          },
          "dependencies": [
            "aws_subnet.subnet_public_b",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:171677985136:security-group/sg-036486f7b17b617ab",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-036486f7b17b617ab",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MYSQL/Aurora",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-087a1d525f2940751"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow_rds",
            "name_prefix": "",
            "owner_id": "171677985136",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh-estudos-perdidao"
            },
            "tags_all": {
              "Name": "allow_ssh-estudos-perdidao"
            },
            "timeouts": null,
            "vpc_id": "vpc-07801e3c0392af6b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:171677985136:security-group/sg-087a1d525f2940751",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-087a1d525f2940751",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "171677985136",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh-estudos-perdidao"
            },
            "tags_all": {
              "Name": "allow_ssh-estudos-perdidao"
            },
            "timeouts": null,
            "vpc_id": "vpc-07801e3c0392af6b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:171677985136:subnet/subnet-0a48c514e15861543",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a48c514e15861543",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "171677985136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-private-a-estudos-perdidao"
            },
            "tags_all": {
              "Name": "subnet-private-a-estudos-perdidao"
            },
            "vpc_id": "vpc-07801e3c0392af6b1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:171677985136:subnet/subnet-0017b5c7857c880d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0017b5c7857c880d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "171677985136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-private-b-estudos-perdidao"
            },
            "tags_all": {
              "Name": "subnet-private-b-estudos-perdidao"
            },
            "vpc_id": "vpc-07801e3c0392af6b1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:171677985136:subnet/subnet-092daef5bd9ea1d9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092daef5bd9ea1d9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "171677985136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-public-a-estudos-perdidao"
            },
            "tags_all": {
              "Name": "subnet-public-a-estudos-perdidao"
            },
            "vpc_id": "vpc-07801e3c0392af6b1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:171677985136:subnet/subnet-0814864bd5aea2600",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0814864bd5aea2600",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "171677985136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-public-b-estudos-perdidao"
            },
            "tags_all": {
              "Name": "subnet-public-b-estudos-perdidao"
            },
            "vpc_id": "vpc-07801e3c0392af6b1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:171677985136:vpc/vpc-07801e3c0392af6b1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-052d15de2a9018443",
            "default_route_table_id": "rtb-0278b0954efa90908",
            "default_security_group_id": "sg-01630f68a12371865",
            "dhcp_options_id": "dopt-06da1bc3e97ae1a4e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07801e3c0392af6b1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0278b0954efa90908",
            "owner_id": "171677985136",
            "tags": {
              "Name": "vpc-estudos-perdidao"
            },
            "tags_all": {
              "Name": "vpc-estudos-perdidao"
            }
          }
        }
      ]
    }
  ]
}